--- a/client/src/components/trello/trelloItem/trelloItemHeader/TrelloItemHeader.scss
+++ b/client/src/components/trello/trelloItem/trelloItemHeader/TrelloItemHeader.scss
@@ -1,6 +1,7 @@
 .trello_list_header {
   position: relative;
   padding: 0.6rem 0.8rem;
+  cursor: pointer !important;
 
   .trello_list_more {
     position: absolute;
