clickOutside 함수 리팩토링 Element에서 export, card이동시 업데이트 완료

--- a/client/src/components/trello/TrelloList.scss
+++ b/client/src/components/trello/TrelloList.scss
@@ -3,12 +3,10 @@
   .trello_list {
     min-width: 27.2rem;
     margin: 0 0.4rem;
-    height: 100%;
+    height: calc(100% - 0.3rem);
     box-sizing: border-box;
     display: inline-block;
     vertical-align: top;
     white-space: nowrap;
-    margin-bottom: 0.8rem;
-    padding-bottom: 0.8rem;
   }
 }
