--- a/client/src/components/trello/trelloItem/trelloItemHeader/TrelloItemHeader.scss
+++ b/client/src/components/trello/trelloItem/trelloItemHeader/TrelloItemHeader.scss
@@ -5,11 +5,11 @@
 
   .trello_list_more {
     position: absolute;
-    right: 0.4rem;
-    top: 0.4rem;
-    .trello_popover_wrapper {
+    right: 0.2rem;
+    top: 0.2rem;
+    .trello_list_more {
       position: relative;
-      .trello_list_more_icon {
+      .more_icon {
         width: 3.2rem;
         height: 3.2rem;
         border-radius: 0.3rem;
