--- a/client/src/components/custom/Elements.scss
+++ b/client/src/components/custom/Elements.scss
@@ -1,4 +1,5 @@
-// button ---------------------------------------------------
+@import './BtnLoading.scss';
+// Button ---------------------------------------------------
 $green: #5aac44;
 $green_hover: #61bd4f;
 $green_active: #49852e;
@@ -11,6 +12,7 @@ $red_active: #a82727;
 $disabled: #a5adba;
 
 @mixin submit_button($width, $height, $base, $hover, $active) {
+  @include btn_loading;
   width: $width;
   height: $height;
   padding: 0 1.4rem;
@@ -57,22 +59,22 @@ button[type='submit'].signup_submit {
   @include submit_button(100%, 3.6rem, $blue, $blue_hover, $blue_active);
 }
 
-// textarea ---------------------------------------------------
+// Textarea ---------------------------------------------------
 @mixin textarea {
   color: var(--dark-blue);
   font-size: 1.4rem;
+  line-height: 2rem;
   resize: none;
+  overflow-wrap: break-word;
+  overflow: hidden;
 }
 
 textarea[type='text'].trello_title {
   @include textarea;
   width: 22.8rem;
   height: 2.8rem;
-  line-height: 2rem;
   padding: 0.4rem 0.8rem;
   font-weight: 600;
-  overflow: hidden;
-  overflow-wrap: break-word;
   background: transparent;
   cursor: pointer;
 
@@ -87,10 +89,28 @@ textarea[type='text'].create_card_title {
   @include textarea;
   width: 100%;
   height: 5.7rem;
-  line-height: 2rem;
   min-height: 1.2rem;
   max-height: 25.6rem;
-  display: block;
-  overflow: hidden;
-  overflow-wrap: break-word;
+}
+
+// Popover ---------------------------------------------------
+.popover {
+  position: absolute;
+  z-index: 10;
+}
+
+// Modal ---------------------------------------------------
+.modal {
+  position: fixed;
+  z-index: 11;
+}
+
+.back_drop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 10;
 }
