--- a/client/src/components/trello/trelloItem/popover/PopTrello.scss
+++ b/client/src/components/trello/trelloItem/popover/PopTrello.scss
@@ -1,8 +1,6 @@
 .trello_popover {
-  position: absolute;
   top: 4rem;
   left: 0;
-  z-index: 10;
 
   .trello_popover_content {
     background-color: var(--pure-white);
@@ -50,11 +48,13 @@
 
           .delete_form_field {
             display: flex;
+            justify-content: space-between;
             height: 3.2rem;
             margin-top: 0.8rem;
             padding: 0 1.2rem;
 
             input[type='text'].delete_input {
+              flex-grow: 1;
               height: 100%;
               padding: 0.8rem 1.2rem;
               line-height: 2rem;
