--- a/client/src/components/custom/Elements.scss
+++ b/client/src/components/custom/Elements.scss
@@ -100,9 +100,13 @@ textarea[type='text'].create_card_title {
 }
 
 // Modal ---------------------------------------------------
-.modal {
-  position: fixed;
+.custom-modal {
+  width: 100%;
+  height: 100%;
+  position: absolute;
   z-index: 11;
+  left: 0;
+  top: 0;
 }
 
 .back_drop {
