--- a/client/src/components/modal/createBoard/ModalCreateBoard.scss
+++ b/client/src/components/modal/createBoard/ModalCreateBoard.scss
@@ -1,8 +1,8 @@
-.create_board_dialog {
+// .creat-board-modal {
+// top: 116px !important;
+.board-modal-inner {
   width: 40rem;
-  left: 50%;
-  top: 5rem;
-  transform: translateX(-50%);
+  margin: 48px auto 0;
 
   .set_board {
     display: flex;
@@ -88,3 +88,4 @@
     margin-top: 0.8rem;
   }
 }
+// }
