--- a/client/src/components/custom/Elements.scss
+++ b/client/src/components/custom/Elements.scss
@@ -63,25 +63,32 @@ button[type='submit'].signup_submit {
 @mixin textarea {
   color: var(--dark-blue);
   font-size: 1.4rem;
-  line-height: 2rem;
+  line-height: 2.4rem;
   resize: none;
   overflow-wrap: break-word;
   overflow: hidden;
 }
 
-textarea[type='text'].trello-title {
+textarea[type='text'].textarea-title {
   @include textarea;
-  width: 22.8rem;
-  height: 2.8rem;
+  width: 100%;
+  height: 3.2rem;
   padding: 0.4rem 0.8rem;
   font-weight: 600;
-  background: transparent;
+  background-color: transparent;
   cursor: pointer;
 
   &:focus {
     box-shadow: inset 0 0 0 0.2rem #0079bf;
     background-color: var(--pure-white);
     cursor: initial;
+  }
+
+  &:read-only {
+    @include textarea;
+    box-shadow: none;
+    background-color: transparent;
+    cursor: pointer;
   }
 }
 
