--- a/client/src/components/trello/TrelloList.scss
+++ b/client/src/components/trello/TrelloList.scss
@@ -1,12 +1,16 @@
-.trello_list_wrapper {
+.trello-list-wrapper {
   flex-shrink: 0;
-  .trello_list {
+  .trello-list {
     min-width: 27.2rem;
     margin: 0 0.4rem;
-    height: calc(100% - 0.3rem);
+    height: 100%;
     box-sizing: border-box;
     display: inline-block;
     vertical-align: top;
     white-space: nowrap;
+
+    &.over {
+      background-color: lightgrey;
+    }
   }
 }
