--- a/client/src/pages/trello/TrelloPage.scss
+++ b/client/src/pages/trello/TrelloPage.scss
@@ -21,6 +21,7 @@
 }
 
 .trello-screen {
+  height: 100%;
   padding-top: 4rem;
   display: flex;
   flex: 1;
@@ -40,7 +41,7 @@
         @include trello-header_div;
       }
 
-      .trello-title {
+      .textarea-title {
         padding: 0 1.2rem;
         line-height: 2rem;
         font-size: 1.8rem;
@@ -83,6 +84,8 @@
     padding-bottom: 0.8rem;
 
     .trello-items {
+      min-height: 400px;
+      overflow-y: auto;
       display: flex;
       padding: 0 0.4rem;
       margin-top: 0.4rem;
