--- a/client/src/components/trello/trelloItem/createCard/CreateCard.scss
+++ b/client/src/components/trello/trelloItem/createCard/CreateCard.scss
@@ -11,6 +11,13 @@ form.add-card-form-field {
     cursor: pointer;
   }
 
+  .create_card_title {
+    width: 100%;
+    height: 5.7rem;
+    min-height: 1.2rem;
+    max-height: 25.6rem;
+  }
+
   .card_add_control {
     display: flex;
     align-items: center;
