--- a/client/src/components/trello/trelloItem/header/TrelloHeader.scss
+++ b/client/src/components/trello/trelloItem/header/TrelloHeader.scss
@@ -8,12 +8,30 @@
   .textarea-wrapper {
     width: 100%;
     line-height: 0;
+
     .preventer {
-      width: 100%;
+      width: calc(100% - 40px);
       height: 100%;
       position: absolute;
       left: 0;
       top: 0;
+      z-index: 1;
+    }
+
+    textarea.textarea-title {
+      position: relative;
+      width: 100%;
+      height: 3.2rem;
+      padding: 0.4rem 0.8rem;
+      font-weight: 600;
+      background-color: transparent;
+
+      &:focus {
+        box-shadow: inset 0 0 0 0.2rem #0079bf;
+        background-color: var(--pure-white);
+        cursor: initial;
+        z-index: 2;
+      }
     }
   }
 
