--- a/client/src/layout/global/GlobalLayout.scss
+++ b/client/src/layout/global/GlobalLayout.scss
@@ -101,6 +101,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      cursor: pointer;
 
       svg {
         width: 100%;
