--- a/client/src/pages/trello/popover/Popover_DeleteBoard.scss
+++ b/client/src/pages/trello/popover/Popover_DeleteBoard.scss
@@ -1,4 +1,4 @@
-#trello_popover_content {
+#delete-bard-popover {
   background-color: var(--pure-white);
   border-radius: 0.3rem;
   box-shadow: 0 0.8rem 1.6rem -0.4rem var(--box-shadow), 0 0 0 0.1rem rgba(9, 30, 66, 0.08);
@@ -59,6 +59,7 @@
             box-shadow: inset 0 0 0 0.2rem #0079bf;
             background-color: var(--pure-white);
           }
+
           .red_submit {
             width: 66px;
           }
