board update 작업
title 업데이트

--- a/client/src/components/main/sideBar/SideBar.scss
+++ b/client/src/components/main/sideBar/SideBar.scss
@@ -16,7 +16,7 @@
 
         svg {
           margin-top: 0.2rem;
-          color: #42526e;
+          color: var(--gray-blue);
         }
 
         span {
