--- a/client/src/components/trello/CreateTrello.scss
+++ b/client/src/components/trello/CreateTrello.scss
@@ -74,7 +74,7 @@
 
       svg {
         margin-left: 0.6rem;
-        color: #42526e;
+        color: var(--gray-blue);
         width: 2.4rem;
         height: 2.4rem;
         transition: color 0.2s;
