--- a/client/src/components/trello/trelloItem/TrelloItem.scss
+++ b/client/src/components/trello/trelloItem/TrelloItem.scss
@@ -25,7 +25,7 @@
         color: var(--dark-blue);
 
         svg {
-          color: #42526e;
+          color: var(--gray-blue);
         }
       }
       padding: 4px 8px;
