--- a/client/src/components/custom/button/Button.scss
+++ b/client/src/components/custom/button/Button.scss
@@ -9,6 +9,10 @@ $red_hover: #e64747;
 $red_active: #a82727;
 $disabled: #a5adba;
 
+$gray: #d7d7d7;
+$gray_hover: #dedede;
+$gray_active: #c1c1c1;
+
 @mixin submit_button($width, $height, $base, $hover, $active) {
   button {
     width: $width;
@@ -52,6 +56,10 @@ $disabled: #a5adba;
 
 .signup_submit {
   @include submit_button(100%, 3.6rem, $blue, $blue_hover, $blue_active);
+}
+
+.cancel {
+  @include submit_button(100%, 3.2rem, $gray, $gray_hover, $gray_active);
 }
 
 button {
