--- a/client/src/components/trello/trelloItem/createCard/CreateCard.scss
+++ b/client/src/components/trello/trelloItem/createCard/CreateCard.scss
@@ -32,7 +32,7 @@ form.add-card-form-field {
 
     svg {
       margin-left: 0.6rem;
-      color: #42526e;
+      color: var(--gray-blue);
       width: 2.4rem;
       height: 2.4rem;
       transition: color 0.2s;
