--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,7 @@
 :root {
   --dark-blue: #172b4d;
+  --gray-blue: #42526e;
+  --light-blue: #5b729a;
   --pure-white: #fff;
   --box-shadow: rgba(9, 30, 66, 0.25);
 }
@@ -54,7 +56,8 @@ html {
   font-size: 62.5%;
 }
 
-body {
+body,
+input {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
