--- a/client/src/pages/trello/TrelloPage.scss
+++ b/client/src/pages/trello/TrelloPage.scss
@@ -77,7 +77,7 @@
         }
       }
 
-      .trello-favorite {
+      .board-favorite {
         width: 3.2rem;
         font-size: 1.8rem;
         background-color: hsla(0, 0%, 100%, 0.24);
