--- a/client/src/components/main/boards/list/BoardsList.scss
+++ b/client/src/components/main/boards/list/BoardsList.scss
@@ -33,6 +33,7 @@
       line-height: 2rem;
       text-decoration: none;
       word-break: break-all;
+      user-select: none;
     }
   }
 
@@ -41,19 +42,25 @@
       opacity: 1;
     }
 
-    svg {
+    .board-favorite {
       bottom: 0.6rem;
       right: 0.6rem;
     }
   }
 
-  svg {
-    font-size: 1.6rem;
-    color: var(--pure-white);
+  .board-favorite {
     position: absolute;
-    z-index: 2;
     bottom: 0.6rem;
     right: -1.4rem;
+    z-index: 2;
+    width: 1.6rem;
+    height: 1.6rem;
+    font-size: 1.6rem;
+    color: var(--pure-white);
     transition: all 0.1s;
+
+    &.favorite {
+      color: #f2d600 !important;
+    }
   }
 }
