--- a/client/src/components/trello/trelloItem/TrelloItem.scss
+++ b/client/src/components/trello/trelloItem/TrelloItem.scss
@@ -2,7 +2,7 @@
   height: 100%;
   user-select: none;
 
-  #trello-item {
+  .trello-item {
     display: flex;
     flex-direction: column;
     border-radius: 0.3rem;
