--- a/client/src/layout/global/GlobalLayout.scss
+++ b/client/src/layout/global/GlobalLayout.scss
@@ -20,6 +20,10 @@
     height: 3.2rem;
     justify-content: center;
 
+    &.home {
+      cursor: pointer;
+    }
+
     svg {
       width: 2rem;
       height: 2rem;
